tests/regression/error/hw4_error07.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],
     stmts=[ST_EXP
              {exp=EXP_BINARY
                     {lft=EXP_BOOL true,opr=BOP_GT,rht=EXP_BOOL false}}]}
  : program
;
